<resources>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="isRTL">false</string>
    <string name="number">0</string>
    <string name="you_have_allReady_download_book">You have all ready down load this book</string>
    <string name="stories_youVe_related_read_books">Stories you\'ve related read books</string>
    <string name="leave_your_comment">Leave your comment</string>
    <string name="delete_comment">Are you sure want to delete this comment</string>
    <string name="rating">Rating.....</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="faq">Faq</string>
    <string name="contact_us">Contact Us</string>
    <string name="all_comment">All Comments</string>
    <string name="items_capital">Items</string>
    <string name="items">items</string>
    <string name="by">by</string>
    <string name="no_data_found">No data found</string>
    <string name="message">Need Permissions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacy">
<b>Who may Process Data</b>\n\n
Your personal information (which includes your name, address and any other details you provide to us which concern you as an individual) may be processed both by us and by other companies within our group. Each of the companies authorised to process your information as mentioned above will do so in accordance with this privacy policy. When you place an order via this website we will store your e-mail address along with any other information you may provide. When you use the services on the website, we may need to collect further information about you. This information may include, but is not limited to, details such as your name and address.
\n\n
        <b>Purpose of Processing</b>\n\n
We will use your information for the purpose of providing you with information about our services, articles and news, fulfilling orders placed by you, processing any other transactions authorised or made by you with us, informing you of special offers and providing other marketing information to you which we think you may find of interest, undertaking product or customer research/development.
\n\n
        <b>Disclosure of Information</b>\n\n
In the unlikely event that a liquidator, administrator or receiver is appointed over us or all or any part of our assets that insolvency practitioner may transfer your information to a third party purchaser of the business provided that purchaser undertakes to use your information for the same purposes as set out in this policy. Your information will not be disclosed to government or local authorities or other government institutions save as required by law or other binding regulations.
\n\n
<b>Cookies</b>\n\n
We may send a small file to your computer when you visit our website. This will enable us to identify your computer, track your behaviour on our website and to identify your particular areas of interest so as to enhance your future visits to this website. We may use cookies to collect and store personal data and we link information stored by cookies with personal data you supply to us. Save for the use of cookies, we do not automatically log data or collect data save for information you specifically provide to us. You can set your computer browser to reject cookies but this may preclude your use of certain parts of this website.

<b>Security</b>\n\n
We have implemented security policies, rules and technical measures to protect the personal data that we have under our control from unauthorised access, improper use and disclosure, unauthorised destruction or accidental loss.
\n\n
        <b>Copyright</b>\n\n
All website design, text, graphics, the selection and arrangement thereof are owed by the company running this site, or hosting this site, except where provided under the General Public License (http://www.gpl.org). ALL RIGHTS RESERVED.
\n\n
        <b>Trademarks</b>\n\n
All trademarks of are the property of their respective owners and may be registered in certain parts of the world.
\n\n
        <b>Disclaimer of Warranty and Liability</b>\n\n
The following provisions may be curtailed or disallowed by the laws of certain jurisdictions. In such case, the terms hereof are to be read as excluding or limiting such term so as to satisfy such law.

We do not represent or warrant that the information accessible via this website is accurate, complete or current. We have no liability whatsoever in respect of any use which you make of such information.

The information provided on this website has not been written to meet your individual requirements and it is your sole responsibility to satisfy yourself prior to ordering any products or services from us that they are suitable for your purposes.

Whilst we make all reasonable attempts to exclude viruses from the website, we cannot ensure such exclusion and no liability is accepted for viruses. Thus, you are recommended to take all appropriate safeguards before downloading information or images from this website.

All warranties, express or implied, statutory or otherwise are hereby excluded.

Neither we nor any of our employees or affiliated entities will be liable for any kind of damages and howsoever arising including, without limitation, loss of profits, compensatory, consequential, direct, exemplary, incidental, indirect, punitive or special, damages or any liability which you may have to a third party, even if we have been advised of the possibility of such loss.

We are not responsible for the direct or indirect consequences of you linking to any other website from this website.

These terms and this disclaimer and any claim based on use of information from this website shall be governed by the laws of England and Wales and you agree to submit to the non-exclusive jurisdiction of the Courts of England.
\n\n
        <b>Consent and enquiries</b>\n\n
By continuing to use this site and accessing the information on this website, you signal acceptance of the terms and disclaimer set out above. If you do not accept any of these terms, leave this website now. If you have any enquiry or concern about our privacy policy or the way in which we are handling personal data please contact email. If at any time you wish us to cease processing your information please send a message to the Administrator at the email address on this sites contact page.

Shipping usually takes between 3-5 working days should you require express shipping please email us on info@ninosglobaltech.com (Mon-Fri 9:30-5:30 pm excluding national and bank holidays) for next day deliveries and faster options that we can provide.</string>
    <string name="app_name">Ninos Playzone</string>
    <string name="title_activity_fake">FakeActivity</string>
    <string name="accept_card_payments">Accept Card payments</string>
    <string name="accept_account_payments">Accept Account payments</string>
    <string name="amount_to_charge_required">Amount to charge (required)</string>
    <string name="public_key">Public key</string>
    <string name="amount_to_charge_defaults_to_50">Amount to charge (defaults to ₦50)</string>
    <string name="txref_required">txRef (required)</string>
    <string name="narration">Narration</string>
    <string name="currency_code_e_g_ngn">Currency code e.g. NGN</string>
    <string name="country_code_e_g_ng">Country code e.g. NG</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="start_payment">START PAYMENT</string>
    <string name="secret_key">Secret Key</string>
    <string name="encryption_key">Encryption key</string>
    <string name="francophone">Accept Franc Mobile Money Payments</string>
    <string name="uk_bank">Accept UK Bank Payments</string>
    <string name="sa_bank">Accept South Africa Bank Payments</string>
    <string name="live">Live</string>
    <string name="bank_transfer">Accept Bank Transfer Payments</string>
    <string name="zambia">Accept ZM Mobile money payments</string>
    <string name="rwanda">Accept RWF Mobile money payments</string>
    <string name="uganda">Accept UG Mobile money payments</string>
    <string name="ghana">Accept GH Mobile money payments</string>
    <string name="staging">Show Staging Label</string>
    <string name="ach">Accept ACH payments</string>
    <string name="should_display_fee">Should Display Fee</string>
    <string name="mpesa">Accept Mpesa payments</string>
    <string name="pre_auth_charge">Pre Auth Charge</string>
    <string name="add_subaccounts">Add subaccounts</string>
    <string name="current_vendor">Your current vendor refs are:</string>
    <string name="add_vendor">ADD VENDOR</string>
    <string name="clear">CLEAR</string>
    <string name="accept_ussd_payments">Accept USSD Payments</string>
    <string name="accept_barter_payments">Accept Barter Payments</string>
    <string name="allow_saved_cards">Allow saved cards</string>
    <string name="admob_privacy_link">https://www.your.com/privacyurl</string>
    <string name="play_more_app">https://play.google.com/store/apps/dev?id=7157478532572017100</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="latest">Latest</string>
    <string name="school">Schools</string>
    <string name="category">Genres</string>
    <string name="author">Author</string>
    <string name="download">Download</string>
    <string name="favorites">Favorite</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="toolbar_Title_AllComment">All Comments</string>
    <string name="author_by">by</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="internet_connection_message">Internet connection not available check your internet connection</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="cannot_use_save_permission">Can not use Share future and download option please allow external storage permission</string>
    <string name="cannot_use_upload_image">Can not Update Profile Image please allow external storage permission</string>
    <string name="exit">Exit</string>
    <string name="failed_try_again">Failed try again</string>
    <string name="wrong">something went to wrong please try again later</string>
    <string name="contact_msg">Oops.. somthing went wrong</string>
    <string name="no_data">No Data Yet...</string>
    <string name="main_activity">Main Activity Android E Book</string>
    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">J_Consult</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">legumchim2@gmail.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">coming soon</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+2348106980796</string>
    <string name="about_us_about">About</string>
    <string name="view">View</string>
    <string name="view_number">125K</string>
    <string name="description">Description :-</string>
    <string name="read_book">Read</string>
    <string name="report_book">Report</string>
</resources>