<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_scd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F896C0"
        android:textStyle="bold"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout_scd"
        android:layout_below="@+id/toolbar_scd">

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:background="#FFFFFF">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/app_boder" />

                    <ImageView
                        android:id="@+id/imageView_scd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_landscap"
                        app:layout_collapseMode="parallax" />

                    <View
                        android:id="@+id/view_latest_gridView_adapter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/thum_background" />

                    <View
                        android:id="@+id/viewImage_latest_gridView_adapter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/image_thum_textview_bg" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageView_scd">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/image_thum_bg" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout_title_scd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="118dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_bookName_scd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_authorName_scd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_name"
                                android:textColor="@color/blue_gray"
                                android:textSize="12sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView_view_scd"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:text="@string/view_number"
                                    android:textColor="@color/blue"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:text="@string/view"
                                    android:textColor="@color/blue"
                                    android:textSize="12sp" />

                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>


                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_latestListView_adapter"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="100dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="0dp"
                    card_view:cardPreventCornerOverlap="false"
                    card_view:cardUseCompatPadding="false">

                    <ImageView
                        android:id="@+id/imageView_book_scd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_portable" />

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/cardView_latestListView_adapter"
                    android:gravity="center"
                    android:orientation="horizontal">







                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout_adView_scd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/view_latestListView_adapter" />

           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gradient_line" />
               <!--
                              <LinearLayout
                                  android:id="@+id/lay_favorite"
                                  android:layout_width="0dp"
                                  android:layout_height="wrap_content"
                                  android:layout_gravity="center"
                                  android:layout_weight="1"
                                  android:gravity="center"
                                  android:orientation="vertical">

                                  <ImageView
                                      android:id="@+id/image_favorite_scd"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:contentDescription="@string/app_name"
                                      android:src="@drawable/ic_fav" />

                                  <TextView
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:text="@string/favorites"
                                      android:textColor="@color/detail_favorite"
                                      android:textSize="13sp" />
                              </LinearLayout>

                              <View
                                  android:layout_width="1dp"
                                  android:layout_height="match_parent"
                                  android:layout_gravity="center"
                                  android:layout_marginStart="5dp"
                                  android:layout_marginEnd="5dp"
                                  android:background="@drawable/gradient_line" />
              -->
                <LinearLayout
                    android:id="@+id/lay_download"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"

                        android:src="@drawable/ic_download" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/download"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:textSize="17dp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gradient_line" />

                <LinearLayout
                    android:id="@+id/lay_read"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_read"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_view" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_book"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:textSize="17dp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gradient_line" />

                <LinearLayout
                    android:id="@+id/lay_report_scd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_reportbook" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_book"
                        android:textColor="@color/detail_favorite"
                        android:textSize="13sp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/gradient_line" />


            </LinearLayout>



            <TextView
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/text_desc_title_scd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <View
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="#F896C0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
            <WebView
                android:id="@+id/webView_scd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="5dp"
                tools:ignore="WebViewLayout"
                />



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/view_latestListView_adapter" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progresbar_scd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/textView_noData_scd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_data"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout_scd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>